--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Myhotstar</title>
-  <base href="/">
+  <base href="/FudenAngular">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/d3ff7d6b4e.js" crossorigin="anonymous"></script>
